# ChangeLog for net-www/apache
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-www/cvs-repo/gentoo-x86/net-www/apache/Attic/ChangeLog,v 1.514 2007/04/09 16:31:38 tove Exp $

  09 Apr 2007; Christian Heim <phreak@gentoo.org> apache-2.0.59-r2.ebuild:
  Fixing the built_with_use for apache-2.0.59, since apache-2.0 only supports
  apr-0* for now. Thanks to Marijn for the bugreport and Jakub for the diff.
  Fixing #173750.

  31 Jan 2007; Luca Longinotti <chtekk@gentoo.org> -apache-2.2.3-r2.ebuild:
  Remove old 2.2 version.

  28 Jan 2007; Luca Longinotti <chtekk@gentoo.org> apache-2.0.58-r2.ebuild,
  apache-2.0.59-r2.ebuild, apache-2.2.3-r2.ebuild, apache-2.2.4.ebuild:
  Fix apr deps.

*apache-2.2.4 (21 Jan 2007)

  21 Jan 2007; Christian Heim <phreak@gentoo.org> +apache-2.2.4.ebuild:
  Version bump (thanks to Dean Baender <dcb at baender.com> and Kalin
  Kozhuharov <kalin at ThinRope.net> in #114232).

  20 Jan 2007; Christian Heim <phreak@gentoo.org> apache-2.2.3-r2.ebuild:
  Fixing a small typo in =net-www/apache-2.2.3-r2.

  18 Jan 2007; Luca Longinotti <chtekk@gentoo.org> apache-2.2.3-r2.ebuild:
  Fix quoting, fix ldap dep, use econf correctly, thanks to phreak.

*apache-2.2.3-r2 (15 Jan 2007)

  15 Jan 2007; Luca Longinotti <chtekk@gentoo.org> metadata.xml,
  -apache-2.2.3.ebuild, -apache-2.2.3-r1.ebuild, +apache-2.2.3-r2.ebuild:
  Fix bug #161700, remove srvdir USE flag, misc cleanup.

  11 Jan 2007; Christian Heim <phreak@gentoo.org> apache-1.3.34-r14.ebuild,
  apache-1.3.37.ebuild, apache-2.0.58-r2.ebuild, apache-2.0.59-r2.ebuild,
  apache-2.2.3.ebuild, apache-2.2.3-r1.ebuild:
  Adding EXTRA_ECONF to the ./configure usage (fixes #125798 - thanks to samLT
  <samuelethiec at hotmail.com>).

  09 Jan 2007; Bryan Østergaard <kloeri@gentoo.org>
  -apache-1.3.34-r10.ebuild, -apache-1.3.34-r11.ebuild,
  -apache-2.0.54-r31.ebuild, -apache-2.0.58.ebuild, -apache-2.0.59.ebuild,