@@ -14,14 +14,14 @@ DIST httpd-2.2.4.tar.bz2 4930375 RMD160 bb6e8a7447fa8e8f629010f30b548068de518523
 DIST lingerd-0.94.tar.gz 33938 RMD160 2d7363b763a68c0c7acdadc23779929f4d02153f SHA1 25d32aca3f03fbc9273fca6491444d1920818a1c SHA256 632030f9c1b9e8f817ee19bad74988f3dce7f6ec617677ad5a522e8d491382a0
 DIST mod_ssl-2.8.25-1.3.34.tar.gz 820352 RMD160 90a3913d30c7f4d194907463125c90101005837a SHA1 150f726539d74c0d2af02e482be78bbcdb811395 SHA256 832b240157666efdbdfc1a2fd593ee4eebbc9441ec48ece8276660092b974d07
 DIST mod_ssl-2.8.28-1.3.37.tar.gz 820417 RMD160 6b12c0a52fe0fbb7b91221d1cb37f93fbe59bb11 SHA1 9db2a7240e499da2b99d0df9c1a6fbae0580ba0b SHA256 76437105b5b5593a7dbd8ee45af417233897dcaf910cbc337a68b0db24e35489
-EBUILD apache-1.3.34-r14.ebuild 8891 RMD160 9599e3d0445129959c1b9d2efe6a9e50b7372903 SHA1 2aafa0d192cc48971c68e0257fee4b8332cab1ba SHA256 685ee7e8b67df4864b38b417a2cbf29f9de1eaf2dae60d18dcb1fd0b80b91e0a
-MD5 a75ce9c5a9394e95ffc782ac1d0d29dd apache-1.3.34-r14.ebuild 8891
-RMD160 9599e3d0445129959c1b9d2efe6a9e50b7372903 apache-1.3.34-r14.ebuild 8891
-SHA256 685ee7e8b67df4864b38b417a2cbf29f9de1eaf2dae60d18dcb1fd0b80b91e0a apache-1.3.34-r14.ebuild 8891
-EBUILD apache-1.3.37.ebuild 9066 RMD160 5ee2c26f3e5aba428aea7bea9f241369a6b6e08c SHA1 4fa8b804acc727e9162aed6680e9593cfdee9aa0 SHA256 b90c9cb0f4451d10e423f56917c47dea70acd751cbeaea853eb802a03b713f82
-MD5 cdf3d1f9f5707dd9ddc3f75db84ab0cc apache-1.3.37.ebuild 9066
-RMD160 5ee2c26f3e5aba428aea7bea9f241369a6b6e08c apache-1.3.37.ebuild 9066
-SHA256 b90c9cb0f4451d10e423f56917c47dea70acd751cbeaea853eb802a03b713f82 apache-1.3.37.ebuild 9066
+EBUILD apache-1.3.34-r14.ebuild 8852 RMD160 daeef12d95f43f3d671d7075da05958e7f16d23f SHA1 c405e9aac5e311afae4ed33d1f1fd8487c2f8a45 SHA256 f45dae7acfe637946cdecd9968deddca51b4abdc2f7a61139fb7d848776eca38
+MD5 7a4326454025a68fb7ac584619dc71e0 apache-1.3.34-r14.ebuild 8852
+RMD160 daeef12d95f43f3d671d7075da05958e7f16d23f apache-1.3.34-r14.ebuild 8852
+SHA256 f45dae7acfe637946cdecd9968deddca51b4abdc2f7a61139fb7d848776eca38 apache-1.3.34-r14.ebuild 8852
+EBUILD apache-1.3.37.ebuild 9025 RMD160 2e04dc8ce6f93d2a1c26b6f4a5a7063936e917b1 SHA1 fa64035fd2479821f20b935ea3e3fbe751549fcc SHA256 4361c112fe327b655b03fb7bd1b9767acf7a83e363d56ecbd836d54fa7da4a00
+MD5 49eaac3ac07ba30a8fb1d0c081026ec1 apache-1.3.37.ebuild 9025
+RMD160 2e04dc8ce6f93d2a1c26b6f4a5a7063936e917b1 apache-1.3.37.ebuild 9025
+SHA256 4361c112fe327b655b03fb7bd1b9767acf7a83e363d56ecbd836d54fa7da4a00 apache-1.3.37.ebuild 9025
 EBUILD apache-2.0.58-r2.ebuild 13828 RMD160 87aac30907ad616efd2c4189a21a60a16ea735c3 SHA1 5ec2b771a4103727ef6b1140f577a48955a77de6 SHA256 5728037adca51f7107f60ba8cd0520615baee25e404554334d97c95eb93818f5
 MD5 1d40058937031af0200d99f758192a8a apache-2.0.58-r2.ebuild 13828
 RMD160 87aac30907ad616efd2c4189a21a60a16ea735c3 apache-2.0.58-r2.ebuild 13828
@@ -34,10 +34,10 @@ EBUILD apache-2.2.4.ebuild 14160 RMD160 755d19fc194366cc311f3f1abd19c93aa69876d8
 MD5 d4a6f219c512b7d2a7a2cad683d24d94 apache-2.2.4.ebuild 14160
 RMD160 755d19fc194366cc311f3f1abd19c93aa69876d8 apache-2.2.4.ebuild 14160
 SHA256 6716dc70779dd7b44a3f9618c7903c7185d9f1d8cff576b1fcec28b5c5c50d75 apache-2.2.4.ebuild 14160
-MISC ChangeLog 88377 RMD160 8cb2fbe34410c967dba271ab0679111a94a1a4b5 SHA1 ec241be67bd5f842050f6218d8dcc5832b1eb32a SHA256 3b0d690c4e7d9dc6097605a8a8084c33249ed75ac4e156e242dcc65a4fbafcf5
-MD5 3fac3efa7441b41c5e33e361e9f073ae ChangeLog 88377
-RMD160 8cb2fbe34410c967dba271ab0679111a94a1a4b5 ChangeLog 88377
-SHA256 3b0d690c4e7d9dc6097605a8a8084c33249ed75ac4e156e242dcc65a4fbafcf5 ChangeLog 88377
+MISC ChangeLog 88561 RMD160 ac2e6f0ac5a803fa45880e199c789ee53ee59cd1 SHA1 8e3ec426f6c81a22ec75cc4387c14558ff818e17 SHA256 e73d7a7102bb9aabbb54d483a65e53a381fb2e286f63c466f8e8b1a037b019ef
+MD5 608d21b07eb6ad74366f68e905aab6ac ChangeLog 88561
+RMD160 ac2e6f0ac5a803fa45880e199c789ee53ee59cd1 ChangeLog 88561
+SHA256 e73d7a7102bb9aabbb54d483a65e53a381fb2e286f63c466f8e8b1a037b019ef ChangeLog 88561
 MISC metadata.xml 551 RMD160 1b31261c043e57cabc9bd8582f9b34c09d92d108 SHA1 68bb286a67452c3dae7525195c60b8637cca9b81 SHA256 646729a42ddffcbde3426dd6aa9a77fab923bc348c5b34c9d24083d86fbb15eb
 MD5 0f28752ee3545b3fd8e28ee656e62f4b metadata.xml 551
 RMD160 1b31261c043e57cabc9bd8582f9b34c09d92d108 metadata.xml 551
@@ -60,7 +60,7 @@ SHA256 26585f0ead7cab908a161a06863837680a1c66fbf2fbd3a5eff27049ab17c4f2 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.3 (GNU/Linux)
 
-iD8DBQFGGmpzV3J2n04EauwRAuuGAKCHHNwf6GS15swbEJOOAZONpvkVdACdHx+Y
-8KyOrvSIKvhxOtCbvjDFVFo=
-=ElGJ
+iD8DBQFGKoIayuNVb5qfaOYRAozOAJ0Vcc2c8yLhD1u2F2kh/WcOCEOgSwCfZWMZ
+5IgEhTnFYZXxX7edVD6ban0=
+=Huu8
 -----END PGP SIGNATURE-----
