@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-www/cvs-repo/gentoo-x86/net-www/apache/Attic/apache-1.3.34-r14.ebuild,v 1.6 2007/01/11 10:22:25 phreak Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-www/cvs-repo/gentoo-x86/net-www/apache/Attic/apache-1.3.34-r14.ebuild,v 1.7 2007/04/21 21:28:48 phreak Exp $
 
 inherit eutils fixheadtails multilib
 
@@ -205,11 +205,8 @@ src_install() {
 	rm -rf var/www/localhost
 
 	# config files
-	insinto /etc/conf.d
-	newins ${GENTOO_PATCHDIR}/init/apache.confd apache
-
-	exeinto /etc/init.d
-	newexe ${GENTOO_PATCHDIR}/init/apache.initd apache
+	newconfd ${GENTOO_PATCHDIR}/init/apache.confd apache
+	newinitd ${GENTOO_PATCHDIR}/init/apache.initd apache
 
 	insinto /etc/apache
 	doins ${GENTOO_PATCHDIR}/conf/apache-builtin-mods
