@@ -1,6 +1,10 @@
 # ChangeLog for net-www/apache
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-www/cvs-repo/gentoo-x86/net-www/apache/Attic/ChangeLog,v 1.514 2007/04/09 16:31:38 tove Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-www/cvs-repo/gentoo-x86/net-www/apache/Attic/ChangeLog,v 1.515 2007/04/21 21:28:48 phreak Exp $
+
+  21 Apr 2007; Christian Heim <phreak@gentoo.org> apache-1.3.34-r14.ebuild,
+  apache-1.3.37.ebuild:
+  Stop using insinto /etc/conf.d and use the newconfd function instead, #174266.
 
   09 Apr 2007; Christian Heim <phreak@gentoo.org> apache-2.0.59-r2.ebuild:
   Fixing the built_with_use for apache-2.0.59, since apache-2.0 only supports
